objects/ASI_eForm_Context__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Context_Description__c</fullName>
        <label>Context Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Context_Key__c</fullName>
        <displayFormat>COXTK-{00000}</displayFormat>
        <label>Context Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_External_Email_1__c</fullName>
        <label>External Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_External_Email_2__c</fullName>
        <label>External Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_External_Email__c</fullName>
        <formula>ASI_eForm_External_Email_1__c  + IF(ISBLANK( ASI_eForm_External_Email_2__c), &quot;&quot;, &quot;; &quot; + ASI_eForm_External_Email_2__c)</formula>
        <label>External Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_Contexts10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_Contexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_Contexts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By__c</fullName>
        <formula>ASI_eForm_Responsible_By_1__r.Alias + IF(ISBLANK( ASI_eForm_Responsible_By_2__c), &quot;&quot;,  &quot;, &quot; + ASI_eForm_Responsible_By_2__r.Alias)  + IF(ISBLANK( ASI_eForm_Responsible_By_3__c), &quot;&quot;,  &quot;, &quot; + ASI_eForm_Responsible_By_3__r.Alias)  + IF(ISBLANK( ASI_eForm_Responsible_By_4__c), &quot;&quot;,  &quot;, &quot; + ASI_eForm_Responsible_By_4__r.Alias)</formula>
        <label>Responsible By</label>
        <type>Text</type>
    </fields>
    <label>ASI eForm Context</label>
    <listViews>
        <fullName>CN_Context</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Context_Key__c</columns>
        <columns>ASI_eForm_Context_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Responsible_By_1__c</columns>
        <columns>ASI_eForm_Responsible_By_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Context__c.ASI_eForm_CN_Context</value>
        </filters>
        <label>CN Context</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HK_Context</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Context_Key__c</columns>
        <columns>ASI_eForm_Context_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Context__c.ASI_eForm_HK_Context</value>
        </filters>
        <label>HK Context</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Context Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI eForm Contexts</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_CN_Context</fullName>
        <active>true</active>
        <label>ASI eForm Context (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Context</fullName>
        <active>true</active>
        <label>ASI eForm Context (HK)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>